--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>FCC | Bar Chart</title>
 </head>
 <body>
+    <main id="main">
+        <div class="wrapper">
+           <h1 id="title">Header</h1> 
+        </div>
+    </main>
     <script src="main.js"></script>
 </body>
 </html>
