--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <main id="main">
         <div class="wrapper">
            <h1 id="title">Header</h1> 
+           <div id="bar-chart">
+               
+           </div>
         </div>
     </main>
     <script src="main.js"></script>
