--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main id="main">
         <div class="wrapper">
            <h1 id="title">Header</h1> 
-           <div id="bar-chart">
-               
+           <div id="barchart">
+
            </div>
         </div>
     </main>
