--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main id="main">
         <div class="wrapper">
-           <h1 id="title">Header</h1> 
+           <h1 id="title">GDP Over span of years</h1> 
            <div id="barchart">
 
            </div>
