--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
            </div>
         </div>
     </main>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
